# python-aruco

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  README.md  aruco.i  aruco_wrap.cxx  aruco_wrap.h  build_wheel.sh  namespaces.patch  okapi-typemaps.i  setup.cfg  setup.py  swigbuild.sh
aruco/: ar_omp.h  aruco.h  cameraparameters.h  cvdrawingutils.h  exports.h  marker.h  markerdetector.h
aruco/markerlabelers/: dictionary_based.h
cmake/: FindNumPy.cmake  python.cmake
example/: dfk72_6mm_param2.yml  example.py  fractal.py  fractal_create.py  rollei_live.yml
include/: fractaldetector.h  markerdetector.h
include/fractallabelers/: fractallabeler.h
python/: CMakeLists.txt  MANIFEST.in  __init__.py.in  aruco.i  numpy_old.i  okapi-typemaps.i  setup.ext.py.in  setup.py.in
src/: aruco.i
src/aruco/: CMakeLists.txt  aruco_cvversioning.h  dictionary.h  dictionary_based.cpp  dictionary_based.h  fractaldetector.cpp  fractaldetector.h  ippe.cpp  ippe.h  marker.cpp  marker.h  markerdetector.cpp  markerdetector.h  markerdetector_impl.cpp  markerlabeler.cpp  posetracker.cpp
src/aruco/fractallabelers/: fractallabeler.cpp  fractallabeler.h  fractalmarker.cpp  fractalmarker.h  fractalmarkerset.cpp  fractalmarkerset.h  fractalposetracker.cpp  fractalposetracker.h
src/aruco/markerlabelers/: dictionary_based.cpp  svmmarkers.cpp  svmmarkers.h
src/include/aruco/: markerdetector.h
test/: chessboardinfo_small_meters.yml  test.py
